# gossip_semantic_search

./: .dockerignore  .gitignore  Dockerfile  README.md  conf.py  db_connection.py  docker-compose.yml  main.py  pyproject.toml
app/: app.py
data/: data_loader.py  dataset_preparation.py  ingest_embeddings.py
models/: sentence_embeddings.py
tests/app/: test_app.py
tests/data/: test_dataset_preparation.py  test_ingest_embeddings.py
tests/models/: test_sentence_embeddings.py
utils/: conf.py  postgres.py
