[tool.poetry]
name = "linkup project"
version = "0.1.0"
description = "Linkup project"
authors = ["Valentin Lapparov <vlapparov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = "^3.2.1"
aiohttp = "^3.10.10"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pandas = "^2.2.3"
pgvector = "^0.3.5"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
